# valytics

./: README.md
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/analysis/: comparable.rs  dcf.rs  efficient_frontier.rs  mod.rs  monte_carlo.rs  portfolio_risk.rs  ratios.rs
backend/src/api/: company.rs  mod.rs  portfolio.rs
backend/src/data/: mod.rs  yahoo.rs
backend/src/models/: company.rs  mod.rs  portfolio.rs  valuation.rs
frontend/: package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/company/[ticker]/: page.tsx
